# json2vars-setter

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .releaserc.cjs  .releaserc.json  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  action.yml  action_json2gh.bak.yml  action_json2gh_dynamic.bak.yml  index.html  json2vars-setter.code-workspace  justfile  mkdocs.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  search.json  sitemap.xml  template.json  zensical.toml
.github/: dependabot.yml  release-notes-template.hbs
.github/json2vars-setter/: matrix.json  matrix_static.json  ruby_project_matrix.json
.github/scripts/: gen_language_docs.py  sync-version-refs.sh  sync_doc_action_refs.py
.github/workflows/: bun_test.yml  clang_test.yml  cleanup-caches.yml  crystal_test.yml  dart_test.yml  deno_test.yml  dependabot-auto-rebase.yml  dependabot-metadata.yml  dependabot_prch.yml  dependency-review.yml  deploy.yml  dotnet_test.yml  elixir_test.yml  flutter_test.yml  gcc_test.yml  go_project_matrix.json  go_test.yml  haskell_test.yml  java_test.yml  julia_test.yml  kotlin_test.yml  matrix.json  merge_gate.yml  modern-quality.yml  nodejs_project_matrix.json  nodejs_test.yml  nodejs_test_only_nodejs_pmj.yml  ocaml_test.yml  php_test.yml  prch_test_matrix_json.yml  python_test.yml  refresh-data-files.yml  release-please.yml  ruby_project_matrix.json  ruby_test.yml  rust_project_matrix.json  rust_test.yml  sample_conditional_matrix.yml  sample_dynamic_update.yml  sample_matrix_aggregate.yml  (+16 more)
.issues/: README.md  issue1-enhancement-powershell-vertical-completion.md  issue2-enhancement-clang-gcc-cpp-support.md  issue3-docs-macos-runner-upgrade-response.md  issue4-enhancement-restore-compat-workarounds.md
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md
docs/examples/: basic.md  ci-cd.md  troubleshooting.md
docs/features/: dynamic-update.md  index.md  json-to-variables.md  version-caching.md
docs/javascripts/: mermaid-custom.js
docs/languages/: bun.md  clang.md  crystal.md  dart.md  deno.md  dotnet.md  elixir.md  flutter.md  gcc.md  go.md  haskell.md  index.md  java.md  julia.md  kotlin.md  nodejs.md  ocaml.md  php.md  python.md  ruby.md  rust.md  swift.md  zig.md
docs/reference/: compatibility-notes.md  options.md  version-sources.md
examples/basic/: index.html
examples/bun/: README.md  bun_project_matrix.json  json_parser.test.ts  json_parser.ts
examples/ci-cd/: index.html
examples/clang/: README.md  clang_project_matrix.json  json_parser.hpp  json_parser_test.cpp
examples/crystal/: README.md  crystal_project_matrix.json  json_parser.cr  json_parser_spec.cr  shard.yml
examples/dart/: README.md  dart_project_matrix.json  json_parser.dart  json_parser_test.dart  pubspec.yaml
examples/deno/: README.md  deno_project_matrix.json  json_parser.ts  json_parser_test.ts
examples/dotnet/: JsonParser.cs  JsonParserExample.csproj  JsonParserTests.cs  README.md  dotnet_project_matrix.json
examples/elixir/: README.md  elixir_project_matrix.json  json_parser.exs  json_parser_test.exs
examples/flutter/: README.md  flutter_project_matrix.json  pubspec.yaml
examples/gcc/: README.md  gcc_project_matrix.json  json_parser.hpp  json_parser_test.cpp
examples/go/: README.md  go.mod  main.go  main_test.go
examples/haskell/: README.md  haskell_project_matrix.json  json-parser-example.cabal
examples/haskell/app/: Main.hs
examples/java/: README.md  java_project_matrix.json  pom.xml
examples/julia/: README.md  json_parser.jl  json_parser_test.jl  julia_project_matrix.json
examples/kotlin/: JsonParser.kt  JsonParserTest.kt  README.md  kotlin_project_matrix.json
examples/nodejs/: README.md  nodejs_project_matrix.json  package-lock.json  package.json
examples/ocaml/: README.md  json_parser_example.opam  ocaml_project_matrix.json
examples/php/: README.md  composer.json  php_project_matrix.json
examples/ruby/: Gemfile  README.md  ruby_project_matrix.json
examples/rust/: Cargo.toml  README.md
examples/showcase/: README.md  (+1 more)
features/: index.html
getting-started/: index.html
json2vars_setter/: __init__.py  cache_version_info.py  cli.py  generate_matrix_json.py  generate_matrix_json_depend.py  json_to_github_output.py  update_matrix_dynamic.py
mermaid/: config.json  diagram.mmd  mmd-transparent.sh  puppeteer-config.json
overrides/: main.html
scripts/: delete-gh-cache.sh  json2vars-completion.ps1  run_tests.py
search/: search_index.json
stylesheets/: extra.css  header-title-link.css  mermaid-custom.css
tests/: conftest.py  matrix_static.json  python_project_matrix.json  test_cache_version_info.py  test_cli.py  test_cli_exec.py  test_json_to_github_output.py  test_update_matrix_dynamic.py
(+129 files in other folders)
