[project]
name = "json2vars-setter"
version = "1.10.1"
description = "JSON to Variables Setter (json2vars-setter) is a GitHub Action that parses a JSON file and sets its values as output variables (such as operating systems, Python versions, and GitHub Pages branch) in GitHub Actions workflows."
authors = [
    { name = "7rikazhexde", email = "33836132+7rikazhexde@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0,<3.0.0",
    "typer>=0.24.1,<0.27.0",
]

[project.scripts]
json2vars = "json2vars_setter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["json2vars_setter"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pre-commit>=4.5.1,<5.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-html>=4.2.0,<5.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-testmon>=2.1.4,<3.0.0",
    "ruff>=0.15.10,<0.16.0",
    "mypy>=1.20.1,<3.0.0",
    "types-requests>=2.32.0,<3.0.0",
    "zensical>=0.0.32,<0.0.45",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py310"

[tool.ruff.lint]
# S = flake8-bandit (SAST): flags shell=True, eval, unsafe yaml.load, requests
# without timeout, etc. The shipped package (json2vars_setter) is clean today;
# the rule keeps it that way.
select = ["E", "F", "I", "B", "ANN", "RUF", "S"]
# ANN401 (ban typing.Any in annotations) is intentionally kept on to enforce the
# project-wide "no Any" rule, alongside mypy's disallow_any_explicit.
ignore = ["E402", "E501"]
# Bandit rules that are legitimate in the test suite, not production code:
# S101 assert (pytest), S603/S607 subprocess (command-execution tests), and
# S105 a fake "test-token" fixture string.
per-file-ignores = { "tests/**" = ["S101", "S105", "S603", "S607"] }

[tool.typos.files]
extend-exclude = [
    "uv.lock",
    "requirements.txt",
    "requirements-dev.txt",
    "htmlcov/",
    "*.min.css",
    "*.min.js",
]

[tool.mypy]
files = ["json2vars_setter", "tests", "scripts"]
# Match the project's minimum supported runtime (requires-python = ">=3.10" and
# ruff target-version = "py310"). mypy's python_version is the *lowest* version
# the code must run on, not the newest — setting it to 3.10 makes mypy flag any
# syntax/stdlib API unavailable on 3.10/3.11 across the whole support range.
python_version = "3.10"
# Strict mode + an explicit ban on the Any type (project-wide, incl. tests).
strict = true
disallow_any_explicit = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["json2vars_setter", "tests"]
pythonpath = ["."]

# Enable log output during test execution.
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"

filterwarnings = [
    "ignore::DeprecationWarning:typer.*:",
]

[tool.coverage.run]
source = ["json2vars_setter"]
# explicitly false to address compatibility issues with testmon and pytest-cov
# testmon and pytest-cov both use internal tracing mechanisms to track Python code execution.
# When branch coverage is enabled, pytest-cov provides more detailed tracing, but conflicts with testmon's behavior. This is a limitation of testmon.
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
    "def main",
    "@abstractmethod",
    "abc.abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
